--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,9 +1,10 @@
 [package]
 name = "decrypt_truck"
-version = "0.1.2"
-description = "Decrypt your ATS and ETS2 save games with SII_Decrypt using its DLL"
-authors = ["SiberianCoffe"]
+version = "1.0.0"
 edition = "2021"
 
 [dependencies]
-libloading = "0"
+aes = "0"
+cbc = "0"
+cipher = { version = "0", features = ["block-padding"] }
+flate2 = "1"
