--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,6 +9,14 @@ repository = "https://github.com/CoffeSiberian/DecryptTruck"
 homepage = "https://github.com/CoffeSiberian/DecryptTruck"
 readme = "README.md"
 
+[[bin]]
+name = "decrypt_truck"
+path = "src/main.rs"
+
+[lib]
+name = "decrypt_truck"
+path = "src/lib.rs"
+
 [dependencies]
 aes = "0.8.4"
 cbc = "0.1.2"
