--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,6 +22,7 @@ aes = "0.8.4"
 cbc = "0.1.2"
 cipher = { version = "0.4.4", features = ["block-padding"] }
 flate2 = "1.0.35"
+rayon = "1.10.0"
 
 [build-dependencies]
 winres = "0.1.12"
