--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,7 +22,11 @@ aes = "0.8.4"
 cbc = "0.1.2"
 cipher = { version = "0.4.4", features = ["block-padding"] }
 flate2 = "1.0.35"
+itoa = "1.0.14"
 rayon = "1.10.0"
 
 [build-dependencies]
 winres = "0.1.12"
+
+[profile.release]
+lto = true
