chore: Update launch configuration to include test data argument for improved testing setup

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -19,7 +19,7 @@
                     "kind": "bin"
                 }
             },
-            "args": [],
+            "args": ["./tests/test_data/encrypted_sig/game.sii"],
             "cwd": "${workspaceFolder}"
         },
         {
