--- a/.github/workflows/build-app.yml
+++ b/.github/workflows/build-app.yml
@@ -21,7 +21,7 @@ jobs:
               uses: dtolnay/rust-toolchain@stable
 
             - name: Build app
-              run: cargo build -r
+              run: cargo build --features bin_decrypt_truck -r
 
             - name: Upload executable
               uses: actions/upload-artifact@v4
@@ -39,7 +39,7 @@ jobs:
               uses: dtolnay/rust-toolchain@stable
 
             - name: Build app
-              run: cargo build -r
+              run: cargo build --features bin_decrypt_truck -r
 
             - name: Upload executable
               uses: actions/upload-artifact@v4
