--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,8 +1,8 @@
 [package]
 name = "decrypt_truck"
-version = "1.3.3"
+version = "1.3.4"
 edition = "2021"
-description = "Decrypt your saves in the ATS and ETS 2 games with this quick little utility rewritten in Rust"
+description = "Fast library to decrypt game saves on ETS2 and ATS"
 license = "MIT"
 authors = ["SiberianCoffe <siberiancoffe@outlook.cl>"]
 repository = "https://github.com/CoffeSiberian/DecryptTruck"
@@ -16,6 +16,9 @@ path = "src/lib.rs"
 [[bin]]
 name = "decrypt_truck"
 path = "src/main.rs"
+
+[features]
+bin_decrypt_truck = []
 
 [dependencies]
 aes = "0.8.4"
