--- a/.github/workflows/build-app.yml
+++ b/.github/workflows/build-app.yml
@@ -47,10 +47,28 @@ jobs:
                   name: decrypt_truck
                   path: target/release/decrypt_truck
 
+    build_macos:
+        runs-on: macos-latest
+
+        steps:
+            - uses: actions/checkout@v4
+
+            - name: Install Rust stable
+              uses: dtolnay/rust-toolchain@stable
+
+            - name: Build app
+              run: cargo build --features bin_decrypt_truck -r
+
+            - name: Upload executable
+              uses: actions/upload-artifact@v4
+              with:
+                  name: decrypt_truck_macos
+                  path: target/release/decrypt_truck
+
     upload_release:
         runs-on: ubuntu-latest
 
-        needs: [build_windows, build_ubuntu]
+        needs: [build_windows, build_ubuntu, build_macos]
 
         steps:
             - uses: actions/checkout@v4
@@ -76,6 +94,15 @@ jobs:
               run: |
                   mv "decrypt_truck" "decrypt_truck_ubuntu"
 
+            - name: Download executable MacOS
+              uses: actions/download-artifact@v4
+              with:
+                  name: decrypt_truck_macos
+
+            - name: Rename executable MacOS
+              run: |
+                  mv "decrypt_truck" "decrypt_truck_macos"
+
             - name: Release
               uses: softprops/action-gh-release@v2
               with:
@@ -85,3 +112,4 @@ jobs:
                   files: |
                       decrypt_truck_windows.exe
                       decrypt_truck_ubuntu
+                      decrypt_truck_macos
